--- a/adding-media/assets/stylesheets/main.css
+++ b/adding-media/assets/stylesheets/main.css
@@ -46,16 +46,19 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 /*
   ========================================
   Custom styles
   ========================================
 */
+
 body {
   background: #293f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 /*
   ========================================
   Grid
@@ -117,15 +120,37 @@ body {
 
 /*
   ========================================
+  Rows
+  ========================================
+*/
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:    -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:         linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
   Typography
   ========================================
 */
 
-h1, h3, h4, h5, p {
-  margin-bottom: 22px;
-}
 h1, h2, h3, h4 {
   color: #648880;
+}
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
 }
 h1 {
   font-size: 36px;
@@ -150,13 +175,24 @@ h5 {
 strong {
   font-weight: 400;
 }
-cite, em {
+cite,
+em {
   font-style: italic;
 }
-.teaser a:hover h3 {
-  color: #a9b2b9;
-}
 
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
 
 /*
   ========================================
@@ -164,15 +200,23 @@ cite, em {
   ========================================
 */
 
-a:hover {
-  color: #a9b2b9;
-}
 a {
   color: #648880;
   text-decoration: none;
 }
+a:hover {
+  color: #a9b2b9;
+}
 p a {
   border-bottom: 1px solid #dfe2e5;
+}
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
 }
 
 /*
@@ -190,6 +234,10 @@ p a {
   letter-spacing: .5px;
   margin: 0;
   text-transform: uppercase;
+}
+.btn-alt {
+  border: 1px solid #fff;
+  padding: 10px 30px;
 }
 .btn-alt:hover {
   background: #fff;
@@ -242,6 +290,24 @@ p a {
 
 /*
   ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
+}
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
+
+/*
+  ========================================
   Home
   ========================================
 */
@@ -259,69 +325,51 @@ p a {
   font-size: 24px;
   font-weight: 100;
 }
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
+.teaser a:hover h3 {
+  color: #a9b2b9;
+}
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%
+}
 
-.nav {
-  text-align: right;
-}
-.nav li {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: top;
-}  
-.nav li:last-child {
-  margin-right: 0;
-}
-/*
-  ========================================
-  Rows
-  ========================================
-*/
-.row,
-.row-alt {
-  min-width: 960px;
-}
-.row {
-  background: #fff;
-  padding: 66px 0 44px 0;
-}
-.row-alt {
-  background: #cbe2c1;
-  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
-  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
-  padding: 44px 0 22px 0;
-}
-/*
-  ========================================
-  Leads
-  ========================================
-*/
-
-.lead {
-  text-align: center;
-}
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
-}
 /*
   ========================================
   Speakers
   ========================================
 */
-  
+
+.speaker {
+  margin-bottom: 44px;
+}
 .speaker-info {
   border: 1px solid #dfe2e5;
   border-radius: 5px;
   margin-top: 88px;
-  padding: 22px 0;
+  padding-bottom: 22px;
   text-align: center;
 }
-.speaker {
-  margin-bottom: 44px;
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+/*
+  ========================================
+  Venue
+  ========================================
+*/
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+.venue-hotel {
+  margin-bottom: 22px;
+}
+.venue-map {
+  height: 264px;
 }
